# nanonis_spm

./: LICENSE  LICENSE.txt  NanonisClass.py  NanonisPython-2.py  NanonisPython.py  README.md  package-lock.json  pyproject.toml  test.py
Examples/: Example_AutoApproach.py  Example_BiasSpectroscopy.py  Example_BiasSpectroscopy_MultiSegment.py  Example_Custom2DSweep_GenSweeper.py  Example_CustomBiasSweep.py  Example_CustomZSweep.py  Example_SwitchMode_STM_AFM.py  Example_TipShaper.py  Example_ZDriftMeasurement.py
Nanonis_py/: Nanonis.py
nanonis_spm/: NanonisClass.py  __init__.py
nanonis_spm_examples/: Example_BiasPulsesAtVariousZ.py  Example_ForceDistanceCurve_OffsetComp.py  Example_GenSweeper_MultipleSweeps.py  Example_LockInSweep.py  Example_RFGen_FreqSweep.py  Example_RFGen_FreqSweep_Triggered.py  Example_RFGen_GenSweeper.py  Example_ScansAtDifferentBias.py  Example_SimpleSignalAcquisition.py  Example_TipCleaner.py
trash/: Spectroscopy0001.fsb  Spectroscopy0002.fsb
