[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanonis_spm"
version = "1.0.0"
authors = [
  { name="Samuel O'Neill", email="samuel.oneill@specs-zurich.com" },
]
maintainers = [
  { name="Aitziber Herrero", email="aitziber.herrero@specs-zurich.com" }
]
description = "Python package for controlling Nanonis SPM software through Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[tool.setuptools.packages]
# Include all Python packages under 'Examples'
find = {where = ["Examples"]}