[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanonis_spm"
version = "1.0.2"
authors = [
  { name="Samuel O'Neill", email="samuel.oneill@specs-zurich.com" },
]
maintainers = [
  { name="Aitziber Herrero", email="aitziber.herrero@specs-zurich.com" }
]
description = "Python package for controlling Nanonis SPM software through Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[tool.hatch.build.targets.wheel.force-include]
"nanonis_spm_examples" = "/nanonis_spm_examples"

[tool.hatch.build.targets.sdist.force-include]
"nanonis_spm_examples" = "/nanonis_spm_examples"

